[gd_scene load_steps=4 format=3 uid="uid://8s5gvu1etb4j"]

[ext_resource type="Script" path="res://GUI/InventoryRobotListTile.gd" id="1_2isvl"]

[sub_resource type="LabelSettings" id="LabelSettings_fb33o"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_jsff3"]

[node name="InventoryRobotListTile" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
offset_right = 200.0
offset_bottom = 60.0
script = ExtResource("1_2isvl")

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 2
text = "1x"
label_settings = SubResource("LabelSettings_fb33o")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Watering Robot"
label_settings = SubResource("LabelSettings_jsff3")
horizontal_alignment = 1
autowrap_mode = 2

[node name="PlaceButton" type="Button" parent="."]
custom_minimum_size = Vector2(70, 40)
layout_mode = 2
size_flags_vertical = 4
text = "Place"
